--- a/.github/workflows/tf_deploy_targeted.yml
+++ b/.github/workflows/tf_deploy_targeted.yml
@@ -33,8 +33,8 @@ jobs:
           # Set variables based on run context
           case ${{ inputs.environment }} in
           Ue1AccountA)
-              short_region=uw2
-              region=us-west-2
+              short_region=ue2
+              region=us-east-2
               account_id=1111111111
               aws_assume_role_arn=arn:aws:iam::1111111111:role/Role1
               ;;
